EqualTextleftImageRight component spacing fix

--- a/src/components/EqualTextLeftImageRight/EqualTextLeftImageRight.module.scss
+++ b/src/components/EqualTextLeftImageRight/EqualTextLeftImageRight.module.scss
@@ -1,4 +1,8 @@
 .Section {
+  @media (max-width: 786px) {
+    padding: 0px 15px;
+  }
+
   .Title {
     h1,
     h2,
@@ -24,6 +28,7 @@
   .TextSide {
     display: flex;
     align-items: center;
+    padding: 2em 0em;
 
     .TextSideWrapper {
       max-width: 840px;
